# tinydenticon

./: README.md  pyproject.toml  requirements.txt
tinydenticon/: __init__.py  identicon.py  utils.py
